# emscrakieta

./: CMakeLists.txt  emscrakieta.js  index.html
src/: CMakeLists.txt  main.c
